Fixed Header component on every page. It is now in the same spot and has the same styling. SearchBar is now also in the same spot on every page that renders it. Added a lot of styling for many of the pages, especially the ShoppingList. Checkboxes, text, and delete buttons are aligned. Delete button uniform to one side. Got rid of the padding that made the list skewed to one side.

--- a/server/public/style.css
+++ b/server/public/style.css
@@ -43,10 +43,10 @@
 }
 
 .header{
-    display: inline-block;
+    font-size: 1.5em;
 }
 
-.headerText{
+.headerTextMenu{
     display: inline-block;
 }
 
@@ -55,13 +55,18 @@
     position: "absolute";
     top: 0;
     left: 0;
+    font-size: 1rem;
     /* position: relative; */
     /* left: 0;
     top: 0;
     transform: translate3d(-100vw, 0, 0);
-         
+
     width: 100vw;
     height: 100vh; */
+}
+
+.calendarHeaderText{
+    font-size: 1.5em;
 }
 
 .smallcalendar{
